# tricog-flutter-sample-app

./: BACKEND_SPEC.md  BUILDING_CARDIOSCAN.md  DEVELOPMENT_NARRATIVE.md  README.md  REPORT.md  SESSION_NARRATIVE.md  pubspec.yaml
android/app/: build.gradle.kts
cardioscan-backend/: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
cardioscan-backend/alembic/: alembic.ini  env.py
cardioscan-backend/alembic/versions/: 001_initial_schema.py
cardioscan-backend/app/: auth.py  config.py  database.py  dependencies.py  main.py
cardioscan-backend/app/models/: __init__.py  ecg_record.py  user_profile.py
cardioscan-backend/app/routers/: analytics.py  ecg_records.py  interpretation.py  profile.py
cardioscan-backend/app/schemas/: ecg_record.py  interpretation.py  report.py  stats.py  user_profile.py
cardioscan-backend/app/services/: interpretation.py  report.py  storage.py
cardioscan-backend/scripts/: seed.py
cardioscan-backend/terraform/: main.tf  terraform.tfvars.example  variables.tf
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: driver_main.dart  main.dart
lib/models/: ecg_record.dart  user_profile.dart
lib/screens/: ecg_detail_screen.dart  heart_rate_trends_screen.dart  history_screen.dart  home_screen.dart  new_recording_screen.dart  onboarding_screen.dart  profile_screen.dart
lib/services/: database_service.dart  ecg_simulator.dart  interpretation_service.dart  report_service.dart
lib/theme/: app_colors.dart  app_theme.dart
test/: widget_test.dart
web/: index.html
(+11 files in other folders)
